--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 
 <header class="main-header">
     <div class="container nav-container">
-        <a href="#hero" class="logo"><img src="./images/logo.png" /></a>
+        <a href="#hero" class="logo"><img src="./images/logo.png" style="widht: 50%; height: 50%;" /></a>
         
         <button class="menu-toggle" aria-label="Открыть меню">
             <span class="bar"></span>
