--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
 <footer class="footer-horizontal">
     <div class="container footer-content">
         <div class="footer-item">
-            <span class="footer-brand">Доктор Стафий</span>
+            <img src="{{ '/assets/img/logo-white.png' | relative_url }}" alt="Logo" style="height: 40px;">
         </div>
 
         <div class="footer-item">
